--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <nav>
+    <nav class='navbar navbar-fixed-top navbar-default bg-faded'>
       <%= link_to 'Home', root_path%>
       |
       <%= link_to 'New Campaign', new_campaign_path%>
     </nav>
+    <div class='nav-spacing'></div>
     <div class='container'>
       <%= yield %>
     </div>
