--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -22,6 +22,11 @@
 </div>
 <div class='row'>
   <div class='col-xs-offset-1 col-sm-offset-1 col-xs-8 col-sm-8'>
+    <%= f.input :address %>
+  </div>
+</div>
+<div class='row'>
+  <div class='col-xs-offset-1 col-sm-offset-1 col-xs-8 col-sm-8'>
     <%= f.input :end_date %>
   </div>
 </div>
