--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,22 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript">
+      Stripe.setPublishableKey('<%= ENV["STRIPE_PUBLISHABLE_KEY"]%>');
+    </script>
+    <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyCy1NBsfYySEaaNN8c64ZUa66hK4NJSuaE"></script>
+    <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+    <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+
   </head>
   <body>
     <nav class='navbar navbar-fixed-top navbar-default bg-faded'>
       <%= link_to 'Home', root_path%>
       |
       <%= link_to 'New Campaign', new_campaign_path%>
+      |
+      <%= link_to 'Campaign List', campaigns_path%>
     </nav>
     <div class='nav-spacing'></div>
     <div class='container'>
